3 files modified, 4 added, 4 deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
         <a class="nav-link" [routerLink]="['/']">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/github']">GitHub</a>
+        <a class="nav-link" [routerLink]="['/minhacarteira']">Minha Carteira</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/bitcoin']">BitCoin - Brl</a>
