--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,7 +13,7 @@ color:black;
   padding: 110px 0;
   text-align: center;
   color: black;
-  background: url("https://st2.depositphotos.com/3223379/5356/i/450/depositphotos_53562813-stock-photo-abstract-blue-background.jpg") no-repeat bottom center scroll;
+  background: url("https://img.freepik.com/vetores-gratis/fundo-abstrato-azul-formas-geometricas_1035-17545.jpg?size=626&ext=jpg") no-repeat bottom center scroll;
   background-position: 30% 45%;
   background-color: black;
   -webkit-background-size: cover;
